--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.4",
     "@react-native-async-storage/async-storage": "^1.15.5",
     "@react-native-picker/picker": "^1.16.1",
     "@react-navigation/drawer": "^5.12.5",
